--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "dot": "^1.1.3",
     "env": "0.0.2",
     "react": "^16.13.1",
+    "react-alert": "^7.0.2",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "semantic-ui-react": "^1.2.1",
     "superagent": "^6.0.0"
   },
   "scripts": {
